--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./src/style.css">
     <title>Form Validator</title>
 </head>
 <body>
@@ -36,6 +36,6 @@
         </form>
     </div>
 
-    <script src="script.js"></script>
+    <script src="./src/script.js"></script>
 </body>
 </html>
